Use \Sort in Array