@@ -3,6 +3,7 @@ package org.arend.core.elimtree;
 import org.arend.core.constructor.*;
 import org.arend.core.definition.ClassField;
 import org.arend.core.expr.*;
+import org.arend.core.subst.Levels;
 import org.arend.ext.core.ops.NormalizationMode;
 import org.arend.prelude.Prelude;
 import org.arend.util.Decision;
@@ -123,7 +124,7 @@ public class BranchElimTree extends ElimTree {
           newArguments = new ArrayList<>();
           newArguments.add(array.getElementsType());
           if (!array.getElements().isEmpty()) {
-            newArguments.add(array.getElements().get(0));
+            newArguments.add(array.getElements().getFirst());
             newArguments.add(array.drop(1));
           }
           newArguments.addAll(arguments.subList(index + 1, arguments.size()));
@@ -137,15 +138,12 @@ public class BranchElimTree extends ElimTree {
 
   private static BranchKey getBranchKey(Expression argument) {
     argument = argument.getUnderlyingExpression();
-    if (argument instanceof ConCallExpression) {
-      return ((ConCallExpression) argument).getDefinition();
-    } else if (argument instanceof IntegerExpression) {
-      return ((IntegerExpression) argument).isZero() ? Prelude.ZERO : Prelude.SUC;
-    } else if (argument instanceof ArrayExpression) {
-      return new ArrayConstructor(((ArrayExpression) argument).getElements().isEmpty(), true, true);
-    } else {
-      return null;
-    }
+    return switch (argument) {
+      case ConCallExpression conCallExpression -> conCallExpression.getDefinition();
+      case IntegerExpression integerExpression -> integerExpression.isZero() ? Prelude.ZERO : Prelude.SUC;
+      case ArrayExpression arrayExpression -> new ArrayConstructor(arrayExpression.getElements().isEmpty(), true, true);
+      default -> null;
+    };
   }
 
   @Override
@@ -238,9 +236,8 @@ public class BranchElimTree extends ElimTree {
         result.addAll(newArgs.subList(tuple.getFields().size(), newArgs.size()));
         return result;
       }
-    } else if (singleConstructor instanceof ClassConstructor) {
+    } else if (singleConstructor instanceof ClassConstructor classCon) {
       if (argument instanceof NewExpression) {
-        ClassConstructor classCon = (ClassConstructor) singleConstructor;
         ClassCallExpression classCall = ((NewExpression) argument).getType();
         List<Expression> args = new ArrayList<>();
         for (ClassField field : classCon.getClassDefinition().getNotImplementedFields()) {
@@ -286,7 +283,7 @@ public class BranchElimTree extends ElimTree {
         if (!isZero) args.add(intExpr.pred());
         args.addAll(arguments.subList(index + 1, arguments.size()));
         List<Expression> newArgs = elimTree.normalizeArguments(args);
-        result.add(isZero ? intExpr : Suc(newArgs.get(0)));
+        result.add(isZero ? intExpr : Suc(newArgs.getFirst()));
         result.addAll(isZero ? newArgs : newArgs.subList(1, newArgs.size()));
         return result;
       }
@@ -303,7 +300,7 @@ public class BranchElimTree extends ElimTree {
           args.add(array.getElementsType());
         }
         if (!array.getElements().isEmpty()) {
-          args.add(array.getElements().get(0));
+          args.add(array.getElements().getFirst());
           args.add(array.drop(1));
         }
         args.addAll(arguments.subList(index + 1, arguments.size()));
@@ -319,7 +316,7 @@ public class BranchElimTree extends ElimTree {
             consArgs.add(array.getElementsType());
           }
           consArgs.addAll(newArgs.subList(0, 2 + (withLength ? 0 : 1) + (withElementsType ? 0 : 1)));
-          result.add(FunCallExpression.make(Prelude.ARRAY_CONS, array.getLevels(), consArgs));
+          result.add(FunCallExpression.make(Prelude.ARRAY_CONS, Levels.EMPTY, consArgs));
         }
         result.addAll(newArgs.subList((array.getElements().isEmpty() ? 0 : 2) + (withElementsType ? 0 : 1) + (withLength ? 0 : 1), newArgs.size()));
         return result;
